--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
     "ldrs": "^1.1.2",
